mule-user-guide/v/3.8/salesforce-marketing-cloud-connector.adoc
=  Salesforce Marketing Cloud Connector
:keywords: anypoint studio, connector, endpoint, salesforce, marketing, cloud, sfdc
：imagesdir：./_images
：图标：字体

_选择_

发行说明： link:/release-notes/salesforce-marketing-cloud-connector-release-notes[Salesforce Marketing Cloud连接器发行说明]

演示和技术参考：请参阅https://www.anypoint.mulesoft.com/exchange/?search=salesforce[Anypoint Exchange]

Salesforce Marketing Cloud的Anypoint连接器允许您连接到Salesforce Marketing Cloud API。该连接器提供了利用Salesforce Marketing Cloud功能的便捷方法。

阅读本文档以了解如何使用连接器设置和配置基本流程。仔细阅读 http://mulesoft.github.io/mule-salesforce-marketing-cloud-connector/[技术参考]，了解连接器操作与Salesforce的交互方式。您还可以找到说明如何使用连接器操作的演示应用程序。 link:/release-notes/salesforce-marketing-cloud-connector-Release-Notes[发行说明]是跟踪每个版本连接器版本的功能添加，兼容性限制和API版本更新的好方法。

== 先决条件

本文档假定您熟悉Mule，Mule中的 link:/anypoint-studio/v/6/[Anypoint Studio界面]， link:/mule-user-guide/v/3.8/global-elements[全球元素]， link:/anypoint-studio/v/6/datasense[DataSense]和 link:/mule-user-guide/v/3.8/batch-processing[批量处理]。此外，它假定您熟悉Salesforce Marketing Cloud。

=== 要求

要使用Salesforce Marketing Cloud连接器，您需要：

  Maven依赖关系 - 如果您没有使用 link:https://www.mulesoft.com/lp/dl/mule-esb-enterprise[Anypoint工作室]进行开发，请按照说明安装`pom.xml`文件中的<<Dependencies,Salesforce Marketing Cloud Maven dependencies>>。
  Salesforce Marketing Cloud开发者帐户 - 在 link:http://www.exacttarget.com/[Salesforce Marketing Cloud]注册一个。

要在您的Mule应用程序中使用Salesforce Marketing Cloud连接器，请确保包含名称空间和模式位置。

=== 兼容性

[%header%autowidth.spread]
|===
|应用/服务 |版本
| Mule运行时 | 3.5.2及更高版本
| Marketing Cloud API  | v145.3
|===

=== 依赖

=== 配置Maven依赖关系

下载并安装连接器后，请使用以下步骤使Salesforce Marketing Cloud连接器可用于Mule应用程序中以供使用和打包。

. 将存储库信息添加到项目的pom.xml文件中：
+
[source, xml, linenums]
----
<repositories>
    <repository>
        <id>mule-ee-releases</id>
        <name>MuleEE Releases Repository</name>
        <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
    </repository>
</repositories>
----

. 使用发行版本将模块作为依赖添加到项目中：
+
[source, xml, linenums]
----
<dependency>
    <groupId>org.mule.modules</groupId>
        <artifactId>mule-module-sfdc-marketing-cloud-connector</artifactId>
    <version>RELEASE</version>
</dependency>
----
+
或者最新的：
+
[source, xml, linenums]
----
<dependency>
    <groupId>org.mule.modules</groupId>
        <artifactId>mule-module-sfdc-marketing-cloud-connector</artifactId>
    <version>LATEST</version>
</dependency>
----
+
. 如果您计划在Mule应用程序中使用此模块，则需要将其添加到打包过程中。这样，包含您的流程和Java代码的最终zip文件也包含此模块及其依赖项。为此模块的Mule Maven插件的配置添加一个特殊的内容，如下所示：
+
[source, xml, linenums]
----
<plugin>
    <groupId>org.mule.tools</groupId>
    <artifactId>maven-mule-plugin</artifactId>
    <extensions>true</extensions>
    <configuration>
        <excludeMuleDependencies>false</excludeMuleDependencies>
        <inclusions>
            <inclusion>
                <groupId>org.mule.modules</groupId>
                <artifactId>mule-module-sfdc-marketing-cloud-connector</artifactId>
            </inclusion>
        </inclusions>
    </configuration>
</plugin>
----

== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索连接器，然后单击安装。
. 按照提示安装连接器。

Studio有更新时，会在右下角显示一条消息，您可以单击该消息来安装更新。

== 配置Salesforce Marketing Cloud全局元素

要在您的Mule应用程序中使用Salesforce Marketing Cloud连接器，您必须配置一个全局Salesforce Marketing Cloud连接器元素，供应用程序中的所有Salesforce Marketing Cloud连接器使用（请阅读有关 link:/mule-user-guide/v/3.8/global-elements[全球元素]的更多信息）。

=== 将Salesforce Marketing Cloud连接器添加到流程中

要在Mule应用程序项目中使用Salesforce Marketing Cloud连接器，请创建一个新项目。

=== 创建一个新项目

. 从Anypoint Studio中点击File> New> Mule Project。
.  Studio打开New Mule Project向导。用所需的项目名称填写名称字段。
+
image:new-mule-project.png[新骡子项目]
+
. 如果您计划使用Git，请针对Studio项目使用默认忽略的项目选择"Create a default .gitignore file"，然后单击下一步。
. 点击完成创建项目。
. 将Salesforce Marketing Cloud连接器拖到画布上，然后选择该连接器以打开属性编辑器。
. 配置连接器的参数：
+
image:operation_config.png[Salesforce Marketing Cloud操作配置]
+
[%header,frame=topbot]
|===
| {字段{1}}说明
|显示名称 | 在应用程序中输入连接器的唯一标签。
|连接器配置 | 从下拉列表中选择全局Salesforce Marketing Cloud连接器元素。
|操作 | 选择连接器执行的操作。
|===
+
. 保存您的配置。

===  Salesforce Marketing Cloud连接器身份验证

要访问Salesforce实例中的数据，请使用"Basic authentication"进行身份验证。

您只需使用"Basic Authentication"即可在全局配置元素中提供凭据，然后在应用程序中的任何Salesforce Marketing Cloud连接器中引用全局配置。如果您注意到您正在获取连接超时或读取超时，
您可以修改“常规类别”中的“连接超时”和“读取超时”以增加这些值。

.. 基本认证的必需参数：
+
image:salesforce-mktng-cloud-connector-config.png[基本的身份验证]

... 用户名：输入用户名。
... 密码：输入密码。
... 端点：输入负责处理登录请求的端点的地址
... 读取超时：指定消费者在超时前等待响应的时间量（以毫秒为单位）。默认值是0，这意味着 link:https://code.exacttarget.com/apis-sdks/fuel-sdks/[燃料SDK]使用的值将会是
 
... 连接超时：指定用户在超时之前尝试建立连接的时间量（以毫秒为单位）。默认值是0，这意味着Fuel SDK使用的值将被采用

== 使用连接器

Salesforce Marketing Cloud连接器在Mule应用程序中运行，作为安全入口，您可以通过该入口访问Salesforce Marketing Cloud中的组织信息并采取行动。

使用连接器，您的应用程序可以执行Salesforce Marketing Cloud通过Web服务公开的多个操作。例如，在构建与Salesforce Marketing Cloud相连接的应用程序时，如果应用程序将新订户创建为列表，则无需通过自定义编码（以及保护！）连接的工作。相反，您可以将连接器放入流中，配置一些连接细节，然后开始传输数据。

Salesforce Marketing Cloud连接器的实际价值与您在设计时将其与Mule中提供的其他功能结合使用的方式相同。

*  DataSense：启用后， link:/anypoint-studio/v/6/datasense[DataSense]为Salesforce Marketing Cloud标准对象（APIObjects）提取元数据，以自动确定应用程序必须传递给Salesforce Marketing Cloud的数据类型和格式。通过启用此功能（位于Global Salesforce Marketing Cloud连接器元素中），Mule会发现您必须发送的数据类型，或准备从Salesforce Marketing Cloud接收数据。
* 转换消息：当此组件与支持DataSense的Salesforce Marketing Cloud连接器配合使用时， link:/anypoint-studio/v/6/datamapper-user-guide-and-reference[DataWeave]可自动提取APIObject元数据，您可以使用这些元数据直观地映射和/或转换为其他数据格式或结构。例如，如果您在应用程序中配置Salesforce Marketing Cloud连接器，然后将转换消息组件放在其后面，DataWeave将使用DataSense提取的信息预先填充输入值以进行映射。换句话说，DataSense确保DataWeave知道它必须工作的数据格式和结构，因此您不必手动将其解决。而且，DataWeave有一种脚本语言，可让您控制数据类型之间的映射。
* 批处理： link:/mule-user-guide/v/3.8/batch-processing[批量作业]是将消息拆分为单个记录，对每条记录执行操作，然后报告结果并将处理后的输出推送到其他系统或队列的代码块。此功能在处理流式输入或与SaaS提供商（如Salesforce Marketing Cloud）进行工程"near real-time"数据集成时非常有用。

在Salesforce Marketing Cloud连接器1.0.0版发布时，它只能用作_outbound_连接器。

在您的流程中将其用作出站连接器，只需将连接器放置在入站端点之后的任何点（请参见下面的图片顶部），即可将数据推送到Salesforce Marketing Cloud。请注意，您还可以在 link:/mule-user-guide/v/3.8/batch-processing[批处理]中使用Salesforce Marketing Cloud连接器批量推送数据到Salesforce Marketing Cloud（请参阅下面的图片，底部）。

image:sfdc-mktng-outbound.png[SFDC-mktng-outbound.png]

image:sfdc-mktng-example_batch_output1.png[SFDC-mktng-example_batch_output1]

== 已知问题和限制

Salesforce Marketing Cloud连接器附带一些注意事项。如果您正在处理复杂字段内的子类，试图从层次结构中检索字段或尝试返回"Automation"对象，请继续阅读。

=== 为复杂字段提供子类型的解决方法

Salesforce Marketing Cloud中的某些对象具有属于基类的复杂字段（例如，重复字段）
在这种特殊情况下，DataSense只能显示特定于基类的字段，但您可能希望使用属于该基类的子类的其他字段。

[NOTE]
====
您可以通过在Transform Message组件中手动添加所需的字段来实现此行为。另外，为了使Salesforce Marketing Cloud知道您想使用子类并识别您添加的字段，还必须添加一个名为"concreteClassType"的类型为String的额外字段，其值是子类的名称。
====

请转到<<Providing a Subclass as a Type to a Complex Field, Providing a Subclass as a Type to a Complex Field>>小节，以获取详细说明如何实现这一点的示例。


=== 从层次结构中检索字段是不可能的

Retrieve操作允许您以类似SQL查询的方式检索记录。

[NOTE]
Marketing Cloud API有一个限制，可以防止检索属于层次结构一部分的字段。

为了更好地说明这个问题，我们将通过一个例子。订购者对象具有复杂的结构：+

image:subscriber-structure.png[用户结构]

API只允许我们查询第一级的字段，例如EmailAddress或SubscriberKey，但不包含像Attributes.Name这样的字段

包含自动化对象的=== 服务器结果导致异常被引发

在自动化对象上执行操作（如创建或删除）时，返回的结果还将包含您所采取行动的自动化对象的结构。

[NOTE]
问题在于服务器还返回了自动化中名为"isPlatformObject"的附加字段，该字段无法被WSDL识别。

要绕过此问题，请使所有直接使用自动化对象的操作都是异步的。如果操作是异步的，
该操作的即时响应将类似于"Operation Queued"。

有关如何使操作异步的更多说明，请参阅<<Asynchronous Operations,Asynchronous Operations>>小节。


== 常见用例

以下是Salesforce Marketing Cloud连接器的常见用例：

* 配置创建 - 连接到Marketing Cloud SOAP Web服务时，将带"Create"的"Configure"命令作为操作属性。
* 配置删除 - 连接到Marketing Cloud API SOAP Web服务时，调用"Configure"命令作为操作属性"Delete"。
* 配置更新 - 连接到Marketing Cloud API SOAP Web服务时，将"Update"调用"Configure"命令作为操作属性。
* 创建 - 在Marketing Cloud API Web服务器上创建一个新对象。
* 删除 - 删除Marketing Cloud API Web服务器上的现有对象。
* 执行get max count  - 连接到Marketing Cloud API SOAP Web服务时，将"GetMaxCount"用作操作属性调用"Perform"命令。
* 执行开始 - 当连接到Marketing Cloud API SOAP Web服务时，发送"Start"的"Perform"命令作为操作属性。
* 执行stop  - 连接到Marketing Cloud API SOAP Web服务时，发送"Stop"的"Perform"命令作为操作属性。
* 检索 - 以类似于SQL查询的方式从Marketing Cloud API Web服务器检索对象。
* 计划开始 - 连接到Marketing Cloud API SOAP Web服务时，将带有"Start"的"Schedule"命令作为操作属性进行调用。
* 更新 - 更新Marketing Cloud API Web服务器上的现有对象。
*  Upsert  - 如果对象尚不存在，或者删除Marketing Cloud API Web服务器上的现有对象，则创建一个对象。此操作通过使用Marketing Cloud API SOAP API的"Create"方法实现。

=== 将子类作为类型提供给复杂字段

假设我们要安排现有的自动化功能，每分钟发送一次电子邮件给用户列表。

为了做到这一点，我们将例如通过一个流量变量将一个Schedule Reference输入到连接器中，以提供有关该schedule的详细信息。 +

image:schedule_automation_main.png[计划开始界面]

诸如在发送的电子邮件之间应该传递多少时间的细节应当进入称为“重复”的字段。
例如，在ScheduleDefinition中找到的字段Recurrence是一个没有结构的复杂字段：
image:recurrence.png[复发DataWeave]

要指定我们想要使用MinutelyRecurrence而不是Recurrence，我们必须手动
添加属于MinutelyRecurrence类的字段，并添加一个
额外的字段名为concreteClassType，类型为String，其值是子类的名称。

以下是我们的示例中的ScheduleValidation的映射如何在流变量中查找的方式：
image:schedule-def-mapping.png[计划定义]

请注意，递归图具有一个名为minuteInterval的字段，该字段实际上属于Recurrence的一个子类，
称为MinutelyRecurrence。

为了让连接器知道它正在处理MinutelyRecurrence对象，我们也必须
以MinutelyRecurrence作为值添加额外的concreteClassType字段。

=== 异步操作

大多数操作默认是同步的，这意味着连接器等待操作的结果。有关Marketing Cloud的操作的更多详细信息，请访问 link:http://help.exacttarget.com/en/technical_library/web_service_guide/methods/[Salesforce Marketing Cloud方法文档]。

要指定您希望操作异步操作，您必须使用操作中的选项参数。我们用一个例子来展示
创建操作如何实现此行为。这也可以用其他操作的类似方式完成。

在这个例子中，我们创建了一个自动化对象列表，以提供有效载荷。由于自动化对象存在任何结果的问题
直接与这种类型的对象一起工作的操作会抛出一个由于存在一个未知域而引起的异常，我们使用
操作异步;这可以让我们绕过这个问题。

CreateOptions参数负责使调用异步。在我们的例子中，CreateOptions在flowVars中提供。
image:create-automation-main-screen.png[创建自动化]

这是CreateOptions的映射在flowVars中的外观。 requestType字段确定呼叫的类型（同步或异步）。 conversationID字段分配一个唯一的标识符
到异步调用。

可以使用conversationID，callsInConversation和sequenceCode字段将异步调用分组在一起（例如，如果我们希望对服务器进行5次异步调用，但我们希望它们一起执行，并且要指定执行顺序，则我们将相同的conversationID给他们，我们把callsInConversation的值设为5，这意味着我们的组将有5个呼叫，并且sequenceCode是组中呼叫的顺序）。

对于这个例子，因为我们有一个单独的调用，所以我们将值1传递给callsInConversation和sequenceCode。

image:create-options.png[CreateOptions]

Options参数具有此示例中显示的更多功能。为了进一步研究这个功能
参数，请访问 link:http://help.exacttarget.com/en/technical_library/web_service_guide/objects/[Salesforce Marketing Cloud对象]并查找Option对象（例如，CreateOptions或DeleteOptions）。

== 示例用例 - 创建一个对象

image:sfdc-mktng-all_flow_unconfigured.png[未配置全部在一个流程中]

===  Studio Visual Editor

点击File> New> Mule Project创建一个新的Mule项目。在新项目对话框中，您只需输入项目名称即可。点击完成。

现在我们来创建流程。浏览项目结构并双击src / main / app / project-name.xml并按照以下步骤操作：

. 搜索调色板中的File元素。
. 将File元素拖到画布上。
. 搜索转换消息并将其拖到文件后面。
. 搜索Salesforce Marketing Cloud并在转换消息后拖动它。
. 在Salesforce Marketing Cloud之后添加记录器。
. 我们开始配置每个元素。双击文件元素。
+
image:file_component.jpg[文件组件]
. 点击路径字段旁边的`...`。
. 选择一个包含要上传的.csv文件的文件夹。您可以下载我们的示例文件并将其保存到本地系统上。
+
link:_attachments/DemoTestData.json[DemoTestData.json]
. 单击文件组件并在左侧的文件组件菜单中导航到元数据，然后单击添加元数据按钮。
image:file_metadata.png[文件组件的元数据]
.. 然后点击新创建的下拉菜单"Output: Payload"旁边的"Edit"图标作为值。
image:file-metadata-edit.png[编辑图标的图片]
.. 现在您应该看到类似于以下的内容：
+
image:new_subscriber_metadata.png[为订阅者定义新的元数据]
+
.. 首先选择"Create new type"单选按钮，填写上图中指定的字段。
.. 对于"Type Id"，请输入"DemoMetadata"。
.. 从"Type Id"下的下拉菜单中选择"Example"。
.. 在上述下拉菜单旁边浏览至您下载的测试.json文件。
. 双击Salesforce Marketing Cloud连接器。
. 单击“连接器配置”下拉列表旁边的加号。
. 全局元素属性弹出窗口会提示您输入基本身份验证所需的信息。有关更多信息，请参阅<<Installing and Configuring,Installing and Configuring>>部分。
. 在连接部分，输入用于访问Salesforce Marketing Cloud实例的用户名和密码凭证，或者使用您可能在 link:/mule-user-guide/v/3.8/configuring-properties#properties-files[属性文件]中设置的"placeholders"来引用它们。
. 单击确定返回到Salesforce Marketing Cloud选项卡。
. 从基本设置部分的操作下拉菜单中选择创建。
. 从常规部分的对象类型下拉列表中选择<Object Type to Create>（例如，如果您使用上面提供的测试文件，订阅者）。
.. 对于此示例，创建一个Subscriber类型的对象。您的连接器的配置应该完整。
image:sfdc-mktng-props.png[SFDC-mktng道具]
. 双击Transform Message元素。
. 将输入中的"EmailAddress"字段链接到输出中的"EmailAddress"字段。
. 将输入中的"SubscriberKey"字段链接到输出中的"SubscriberKey"字段。
+
image:subscriber_transform_config.png[订户转换器消息]
+
. 双击记录器组件。
. 在"Message"字段中输入文本"Creation done."现在可以部署应用程序。
. 在Anypoint Studio中运行应用程序（右键单击项目名称>运行方式> Mule应用程序）。监控Studio控制台中是否有"Creation done."消息，并确保新对象是在Salesforce Marketing Cloud中创建的。

[NOTE]
对于其他实体，您可以使用类似的流程，但必须将"Salesforce Marketing Cloud"中的"Object Type"更改为要创建的对象的名称，并将变换消息组件中的字段重新映射如所须。 "Upload"和"Delete"可以完全相同的方式进行配置。

===  XML编辑器

按照以下步骤进行操作，您将最终获得与Studio Visual Editor选项卡中所示相同的功能应用程序。通过跳转到<<Complete Flow XML,Complete Flow XML>>，引用此应用的完整XML配置。

. 为您的项目添加一个`context:property-placeholder`元素，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<context:property-placeholder location="mule-app.properties"/>
----

. 为您的项目添加一个`sfdc-marketing-cloud:config`元素，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<sfdc-marketing-cloud:config name="Salesforce_Marketing_Cloud__Basic_Authentication" username="${config.username}" password="${config.password}" endpoint="${config.endpoint}" doc:name="Salesforce Marketing Cloud: Basic Authentication"/>
----

. 为您的项目添加一个Flow元素，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<flow name="usecase1Flow">
</flow>
----

. 在flow标签内添加一个`file:inbound-endpoint`元素到您的项目中，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<file:inbound-endpoint responseTimeout="10000" doc:name="File" moveToDirectory="src/main/resources/processed" path="src/main/resources/input"/>
----

. 在flow标签内添加一个`dw:transform-message`元素到您的项目中，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
}]]></dw:set-payload>
</dw:transform-message>
----

. 在flow标签内添加一个`sfdc-marketing-cloud:create`元素到您的项目中，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<sfdc-marketing-cloud:create config-ref="Salesforce_Marketing_Cloud__Basic_Authentication" objectType="Subscriber" doc:name="Salesforce Marketing Cloud"/>
----

. 在flow标签内添加一个`sfdc-marketing-cloud:create`元素到您的项目中，然后配置其属性，如下所示：
+
[source,xml,linenums]
----
<logger level="INFO" doc:name="Logger" message="Creation done."/>
----
....
------

=== Complete Flow XML

You may check your code against the complete application's XML representation, shown below.

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:context="http://www.springframework.org/schema/context" 
xmlns:file="http://www.mulesoft.org/schema/mule/file" 
xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw" 
xmlns:sfdc-marketing-cloud="http://www.mulesoft.org/schema/mule/sfdc-marketing-cloud" 
xmlns="http://www.mulesoft.org/schema/mule/core" 
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/context 
    http://www.springframework.org/schema/context/spring-context-current.xsd
http://www.springframework.org/schema/beans 
http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core 
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/sfdc-marketing-cloud 
http://www.mulesoft.org/schema/mule/sfdc-marketing-cloud/current/mule-sfdc-marketing-cloud.xsd
http://www.mulesoft.org/schema/mule/file 
http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/ee/dw 
http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd">
	<context:property-placeholder location="mule-app.properties"/>
    <sfdc-marketing-cloud:config name="Salesforce_Marketing_Cloud__Basic_Authentication" 
    username="${config.username}" 
    password="${config.password}" 
    endpoint="${config.endpoint}" 
    doc:name="Salesforce Marketing Cloud: Basic Authentication"/>
    <flow name="usecase1Flow">
        <file:inbound-endpoint 
        responseTimeout="10000" 
        doc:name="File" 
        moveToDirectory="src/main/resources/processed" 
        path="src/main/resources/input"/>
        <dw:transform-message doc:name="Transform Message">
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
{
}]]></dw:set-payload>
        </dw:transform-message>
        <sfdc-marketing-cloud:create config-ref="Salesforce_Marketing_Cloud__Basic_Authentication" 
        objectType="Subscriber" doc:name="Salesforce Marketing Cloud"/>
        <logger level="INFO" doc:name="Logger"/>
    </flow>
</mule>
----

== See Also

* Access http://mulesoft.github.io/mule-salesforce-marketing-cloud-connector/[full technical reference documentation] for the Salesforce Marketing Cloud connector.
* Read more about link:/mule-user-guide/v/3.8/anypoint-connectors[Anypoint Connectors].
* Read more about link:/mule-user-guide/v/3.8/batch-processing[Batch Processing] in Mule.
